# sigfox-device-motherboard

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h  sdm_flags.h
application/src/: main.c
drivers/components/inc/: aht2x_driver_flags.h  lis2dh12_driver_flags.h  ltr329_driver_flags.h  s2lp_driver_flags.h  sensors_hw.h
drivers/components/src/: aht2x_hw.c  lis2dh12_hw.c  ltr329_hw.c  s2lp_hw.c
drivers/device/inc/: stm32l0xx_device_flags.h
drivers/peripherals/inc/: i2c_address.h  mcu_mapping.h  nvic_priority.h  nvm_address.h  stm32l0xx_drivers_flags.h
drivers/peripherals/src/: mcu_mapping.c
drivers/registers/inc/: stm32l0xx_registers_flags.h
drivers/utils/inc/: embedded_utils_flags.h  terminal_instance.h
drivers/utils/src/: terminal_hw.c
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/cli/inc/: cli.h
middleware/cli/src/: cli.c
middleware/power/inc/: power.h
middleware/power/src/: power.c
middleware/sigfox/inc/: sigfox_ep_flags.h  sigfox_ep_frames.h
middleware/sigfox/src/: rf_api.c
